--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <a href="#"  class="button2">Button 2</a>
   <!-- button 3 -->
   <input type="button" value="Button 3" class="button3">
+  <!-- button 4 -->
+  <div class="button4">Button 4<div>
 </body>
 </html>
